# Python-Packaging

./: pyproject.toml
src/example_package.egg-info/: PKG-INFO  SOURCES.txt
